bin/pruebas/ingressService.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smartcart-ingress
  namespace: default
  labels:
    env: development
spec:
  rules:
    - http:
        paths:
          - path: /consumer
            backend:
              serviceName: consumer
              servicePort: 1337
          - path: /pct
            backend:
              serviceName: pct
              servicePort: 1337
